

*****  Mi 19. Feb 16:24:09 CET 2020  *****

Added AtroBetter entry in Featured Articles section in docs.


*****  Mi 4. Mär 17:40:11 CET 2020  *****

Modified lm.build_bib() to remove everything before \begin{document}.


*****  Thu Apr  2 00:18:27 CEST 2020  *****

Implemented lm.parse_subtex_files() to parse subtex files
included in main tex text (recursively).  It currently captures
input, include, and subfile calls.  It does not look for import
calls.
Documented and tested.


*****  Fri Apr 3 20:03:12 CEST 2020  *****

Bumped bibmanager version to 1.2.3.


*****  Sun May 31 14:58:05 CEST 2020  *****

Changed the pickle protocol from pickle.HIGHEST_PROTOCOL to 4
to allow for compatibility between Python 3.6/3.7 and later versions
(which have higer pickle.HIGHEST_PROTOCOL).

*****

Bumped bibmanager version to 1.2.4.
Fixes #63


*****  Sat Aug 15 14:53:10 2020 +0200  *****

Fixed bug in bm.loadfile() when entry is in a single line.

*****

Fixed indentation error in tests.

*****

Cosmetics.

*****

Bumped bibmanager version to 1.2.5.
Fixes #66


*****  Sun Aug 16 13:16:21 2020 +0200  *****

Enabled fetch and open optional arguments for ads-add command.
Solves first part of issue #65.

*****

Bumped bibmanager version to 1.2.6.


*****  Sat Sep  5 20:51:09 CEST 2020  *****

Added --add --fetch --open options to ads_search command-line arg
Documentations is TBD.

*****

Modified pm.set_pdf() and pm.fetch() functions to return the
output PDF file path/name if successfully dowloaded or the entry has
a non None pdf value.
Updated docs and tests accordingly.

*****

Added pdf_file argument to pm.open() function that sets the output
PDF file path/name (even if not in the database).

*****

Enabled fetching PDF files from ADS for entries that are not in the
database.

*****

Redirect ads-add's fetch/open to cli_fetch().


*****  Sun Sep 6 13:29:18 CEST 2020  *****

Documented add, fetch, and open arguments for ads-search and ads-add.
